name:                CoinberryApi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/CoinberryApi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CoinberryApi
  other-modules:       CoinberryApi.Prelude
                     , CoinberryApi.Api
                     , CoinberryApi.Domain
                     , CoinberryApi.Database
                     , CoinberryApi.Handlers
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , either
                     , vector
                     , http-types
                     , protolude >= 0.1.6 && < 0.3
                     , hasql >= 1.1.1 && < 1.2
                     , hasql-pool >= 0.4.3 && < 0.5
                     , servant-swagger
                     , swagger2
                     , microlens
                     , elm-export
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

executable js-api
  hs-source-dirs:      app
  main-is:             JS.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CoinberryApi
                     , protolude >= 0.1.6 && < 0.3
                     , servant-js
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase


executable api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CoinberryApi
                     , protolude >= 0.1.6 && < 0.3
                     , dhall
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

test-suite api-elm
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , CoinberryApi
                     , hspec
                     , protolude >= 0.1.6 && < 0.3
                     , elm-export
                     , servant-elm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CoinberryApi
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , protolude >= 0.1.6 && < 0.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

source-repository head
  type:     git
  location: https://github.com/githubuser/CoinberryApi
