name:                notary
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Notary#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Notary
  other-modules:       Notary.Prelude
                     , Notary.Api
                     , Notary.Domain
                     , Notary.Database
                     , Notary.Handlers
                     , Notary.AppM
                     , Notary.JWT
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , either
                     , vector
                     , http-types
                     , protolude >= 0.1.6 && < 0.3
                     , hasql >= 1.4
                     , hasql-pool >= 0.4.3 && < 0.6
                     , servant-swagger
                     , swagger2
                     , microlens
                     , elm-export
                     , jose
                     , auto-update
                     , time
                     , auto-update
                     , monad-time
                     , fast-logger
                     , cryptonite
                     , base64-bytestring
                     , lens

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

executable notary
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notary
                     , protolude >= 0.1.6 && < 0.3
                     , warp
                     , envparse
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

test-suite notary-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ApiSpec
  build-depends:       base
                     , notary
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , protolude >= 0.1.6 && < 0.3
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, LambdaCase

source-repository head
  type:     git
  location: https://github.com/Coinberry/notary
